--- a/form/회원가입.md
+++ b/form/회원가입.md
@@ -6,7 +6,6 @@
         * Spring Web
         * Spring Boot DevTools
         * Spring Security
-        * OAuth2 Client
         * Lombok
         * Thymeleaf
         * MySQL Driver
@@ -18,21 +17,17 @@
         - MyBatis 설정
 
 3. ERD
-    https://www.erdcloud.com/d/gqtj2t7rW3R46Cy8z
+    https://www.erdcloud.com/d/TbvPCZCLK9gQeYeST
 
 
 4. 테이블 정의
     - USER
     - USER_AUTH
-    - USER_SOCIAL
 
 
 4. 도메인
     - Users.java
     - UserAuth.java
-    - UserSocial.java
-    - CustomeUser.java
-    - OAuthAttributes.java
 
 5. 데이터
     - UserMapper.xml
@@ -41,20 +36,28 @@
 6. 서비스
     - UserService.java
     - UserServiceImpl.java
-    - OAuthService.java
-    - OAuthServiceImpl.java
-
-
 
 7. 스프링 시큐리티 설정
     - 📄 ~/config/SecurityConfig.java
+    - 📄 ~/config/CommonConfig.java
         
-
 8. 요청 경로 매핑
-    📄 ~/controller/HomeController.java
-    - 메인 화면
-        - 🔗 /
-        - 📄 index.html
+    - 📄 ~/controller/HomeController.java
+        - 메인 화면
+            - GET
+            - 🔗 /
+            - 📄 index.html
+
+        - 회원 가입 화면
+            - GET
+            - 🔗 /join
+            - 📄 join.html
+            
+        - 회원 가입 처리
+            - POST
+            - 🔗 /join
+            - ⭕ ➡ /login          (로그인으로 이동)
+            - ❌ ➡ /join?error     (회원가입으로 다시 이동)
 
         
 
