--- a/form/커스텀 로그인.md
+++ b/form/커스텀 로그인.md
@@ -13,6 +13,12 @@
 
 2. 스프링 시큐리티 설정
     - 📄 ~/config/SecurityConfig.java
+        
+3. 요청 경로 매핑
+    - 📄 ~/controller/HomeController.java
+        - 로그인 화면
+            - 🔗 /login
+            - 📄 login.html
 
         
 
