--- a/form/회원가입.md
+++ b/form/회원가입.md
@@ -59,6 +59,12 @@
             - ⭕ ➡ /login          (로그인으로 이동)
             - ❌ ➡ /join?error     (회원가입으로 다시 이동)
 
+        - 아이디 중복 확인
+            - POST
+            - 🔗 /check/{username}
+            - ⭕ ➡ true
+            - ❌ ➡ false
+
         
 
     
